fedhr-postgres-deployment.yaml
# FEDHR POSTGRES DEPLOYMENT ==============================================
apiVersion: apps/v1
kind: Deployment

metadata:
  name:  fedhr-postgres-deployment
  namespace: default
  labels:
    app:  fedhr-postgres-deployment-label

spec:
  selector:
    matchLabels:
      app: fedhr-postgres-deployment-label

  replicas: 1

  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate

  template:
    metadata:
      labels:
        app:  fedhr-postgres-deployment-label

    spec:
      containers:
      - name:  db-container
        image:  postgres:12.7-buster
        # resources:
        #   requests:
        #     cpu: "1"
        #     memory: 200Mi
        #   limits:
        #     cpu: "20"
        #     memory: 1Gi

        ports:
        - containerPort:  5432
          name:  db-container

        volumeMounts:
          - name: fedhr-postgres-volume-mount
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: fedhr-postgres-volume-mount
          persistentVolumeClaim:
            claimName: fedhr-postgres-pvc

      restartPolicy: Always


---
# FEDHR POSTGRES SERVICE ==============================================
apiVersion: v1
kind: Service
metadata:
  name: fedhr-postgres-service
spec:
  selector:
    app: fedhr-postgres-deployment-label
  ports:
    - protocol: TCP
      # port exposed by the service, can be different from the targetPort
      port: 5432
      # port exposed the pod
      targetPort: 5432
